--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -141,7 +141,11 @@
   text-align: center;
 }
 
-.contact__button--margin {
+.contact__button.contact__button--subContact {
+  margin-top: rem(33);
+}
+
+.contact__button.contact__button--margin {
   @include mq("md") {
     margin-top: rem(16);
   }
