--- a/src/sass/module/_contact-form.scss
+++ b/src/sass/module/_contact-form.scss
@@ -9,7 +9,7 @@
 }
 
 .contact-form__wrap:not(:first-child) {
-  margin-top: rem(24);
+  margin-top: rem(21);
   @include mq("md") {
     margin-top: rem(40);
   }
@@ -18,6 +18,7 @@
 .contact-form__label-wrap {
   @include mq("md") {
     display: flex;
+    // align-items: center;
   }
 }
 
@@ -26,12 +27,9 @@
   font-weight: bold;
   font-family: $font-family-jp;
   color: $dark-green;
-}
-
-.contact-form__select {
-  margin-top: rem(16);
   @include mq("md") {
-    margin-top: rem(0);
+    max-width: rem(218);
+    width: 100%;
   }
 }
 
@@ -40,15 +38,29 @@
   font-weight: normal;
   color: $white;
   background-color: #c94800;
-  padding: rem(2) rem(16);
+  padding: rem(2) rem(13.5);
   display: inline-block;
   margin-left: rem(8);
+  letter-spacing: 0.4em;
+}
+
+.contact-form__select {
+  margin-top: rem(16);
+  flex-grow: 1;
+
+  @include mq("md") {
+    margin-top: rem(0);
+  }
 }
 
 .contact-form__input {
   width: 100%;
   border: 1px solid $green;
   margin-top: rem(16);
+  flex-grow: 1;
+  @include mq("md") {
+    margin-top: rem(0);
+  }
 }
 
 .contact-form__input input {
@@ -62,10 +74,9 @@
 .contact-form__checkbox {
   display: flex;
   flex-direction: column;
-  margin-top: rem(16);
+  margin-top: rem(12);
   @include mq("md") {
     margin-top: rem(0);
-    margin-left: rem(55);
   }
 }
 
@@ -119,6 +130,9 @@
   border: 1px solid $green;
   padding: rem(8) rem(10);
   margin-top: rem(16);
+  @include mq("md") {
+    margin-top: rem(0);
+  }
 }
 
 .contact-form__textarea textarea {
@@ -127,9 +141,12 @@
 }
 
 .contact-form__privacy {
-  margin-top: rem(40);
+  margin-top: rem(34);
   text-align: center;
   position: relative;
+  @include mq("md") {
+    margin-top: rem(79);
+  }
 }
 
 .contact-form__privacy-label {
@@ -160,26 +177,31 @@
   content: "";
   display: block;
   left: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  top: rem(5);
   width: rem(22);
   height: rem(22);
+  @include mq("md") {
+    top: rem(0);
+  }
 }
 
 .contact-form__privacy-label input + span::after {
   content: "";
   margin-top: rem(-2);
   position: absolute;
-  top: 55%;
+  top: rem(12);
   left: rem(2);
-  transform: translateY(-50%) rotate(-45deg);
-  display: inline-block;
-  width: rem(9);
-  height: rem(5);
+  transform: rotate(-45deg);
+  display: block;
+  width: rem(16);
+  height: rem(7);
   border-bottom: 2px solid #c94800;
   border-left: 2px solid #c94800;
   transition: 0.3s;
   opacity: 0;
+  @include mq("md") {
+    top: rem(5);
+  }
 }
 
 .contact-form__privacy-label input:checked + span::after {
