--- a/src/sass/module/_faq.scss
+++ b/src/sass/module/_faq.scss
@@ -16,6 +16,13 @@
   }
 }
 
+.faq-list__item:not(:first-child) {
+  margin-top: rem(45);
+  @include mq("md") {
+    margin-top: rem(30);
+  }
+}
+
 .faq-list__item-question,
 .faq-list__item-answer {
   font-family: $font-family-jp;
@@ -62,12 +69,10 @@
 .faq-list__item-answer {
   font-size: rem(16);
   display: none;
-  padding: rem(24) rem(16);
+  padding: rem(19) rem(16);
   background-color: $white;
   color: $dark-green;
   border: 1px solid $green;
-  // text-indent: prem(-20);
-
   @include mq("md") {
     padding: rem(40);
     margin-top: rem(16);
