--- a/src/sass/module/_gallery-list.scss
+++ b/src/sass/module/_gallery-list.scss
@@ -29,21 +29,27 @@
   height: 100%;
   aspect-ratio: 345/219;
   object-fit: cover;
+  @include mq("md") {
+    aspect-ratio: 580/369;
+  }
 }
 
 .gallery-list__item:nth-of-type(6n + 1) img,
 .gallery-list__item:nth-of-type(6n + 6) img {
   aspect-ratio: 345/523;
+  @include mq("md") {
+    aspect-ratio: 369/580;
+  }
 }
 
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.9);
-}
+// .modal {
+//   display: none;
+//   position: fixed;
+//   z-index: 1;
+//   left: 0;
+//   top: 0;
+//   width: 100%;
+//   height: 100%;
+//   overflow: auto;
+//   background-color: rgba(0, 0, 0, 0.9);
+// }
