--- a/src/sass/module/_gallery.scss
+++ b/src/sass/module/_gallery.scss
@@ -4,13 +4,17 @@
   position: relative;
 }
 
+.gallery__modal {
+  position: relative; /* 親要素に position: relative; を追加 */
+}
+
 .gallery__list {
   margin-top: rem(40);
   @include mq("md") {
     margin-top: rem(80);
   }
 }
-.zoom__content {
+.modal {
   display: none;
   position: fixed;
   z-index: 9999;
@@ -19,16 +23,19 @@
   width: 100%;
   height: 100%;
   background-color: rgba(#202020, 0.8);
-  display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.zoom__content img {
-  max-width: 90vw;
-  max-height: 90vh;
-  width: auto;
-  height: auto;
+.bigimg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* 水平方向と垂直方向の両方で中央に配置 */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 90%; /* 必要に応じて調整 */
 }
 
 .no-scroll {
