--- a/src/sass/module/_pagenavi.scss
+++ b/src/sass/module/_pagenavi.scss
@@ -1,14 +1,126 @@
 @use "global" as *;
 
 .pagenavi {
+  clear: both;
   text-align: center;
 }
 
-.pagenavi a {
+.pagenavi__inner.pagenavi__inner--detail {
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+}
+
+.wp-pagenavi {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.wp-pagenavi.wp-pagenavi--detail {
+  justify-content: space-between;
+  width: 158px;
+}
+
+.wp-pagenavi.wp-pagenavi--detail a:nth-child(2) {
+  margin-left: rem(0);
+}
+
+.wp-pagenavi a {
+  padding: rem(9) rem(14);
+  line-height: 1;
   width: rem(38);
   height: rem(38);
   background-color: $white;
   color: $green;
   border: 1px solid $green;
-  display: inline-block;
+  transition: 0.3s;
+  margin-left: rem(12);
+}
+
+.wp-pagenavi a:hover {
+  color: $white;
+  background-color: $green;
+}
+
+.wp-pagenavi a:nth-child(2) {
+  margin-left: rem(40);
+}
+
+.wp-pagenavi a:last-child {
+  margin-left: rem(40);
+}
+
+.previouspostslink span {
+  position: relative;
+  display: block;
+  width: 11.6px;
+  height: 22.2px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.previouspostslink span::before,
+.previouspostslink span::after {
+  position: absolute;
+  content: "";
+  top: calc(50% - 0.5px);
+  left: 0;
+  width: 12px;
+  height: 1px;
+  background-color: $green;
+  transform-origin: rem(0.5) 50%;
+}
+
+.previouspostslink span::before {
+  transform: rotate(45deg);
+}
+
+.previouspostslink span::after {
+  transform: rotate(-45deg);
+}
+
+.nextpostslink {
+  margin-left: rem(40);
+}
+
+.nextpostslink span {
+  position: relative;
+  display: block;
+  width: 11.6px;
+  height: 22.2px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.nextpostslink span::before,
+.nextpostslink span::after {
+  position: absolute;
+  content: "";
+  top: calc(50% - 0.5px);
+  right: 0;
+  width: 12px;
+  height: 1px;
+  background-color: $green;
+  transform-origin: calc(100% - 0.5px) 50%;
+}
+
+.nextpostslink:hover span::before,
+.nextpostslink:hover span::after {
+  background-color: $white;
+}
+
+.nextpostslink span::before {
+  transform: rotate(-45deg);
+}
+
+.nextpostslink span::after {
+  transform: rotate(45deg);
+}
+
+.previouspostslink:hover span::before,
+.previouspostslink:hover span::after {
+  background-color: $white;
 }
