--- a/src/sass/module/_info-card.scss
+++ b/src/sass/module/_info-card.scss
@@ -43,8 +43,8 @@
 
 .info-card__img {
   margin-top: rem(8);
-  max-width: rem(297);
-  width: 100%;
+  max-width: 100%;
+  // width: rem(297);
   @include mq("md") {
     max-width: rem(492);
     margin-top: rem(0);
