--- a/src/sass/module/_terms-of-service.scss
+++ b/src/sass/module/_terms-of-service.scss
@@ -29,11 +29,11 @@
 .terms-of-service__box {
   margin-top: rem(31);
   color: $dark-green;
-  font-size: rem(16);
+  font-size: rem(15.8);
 }
 
 .terms-of-service__lists {
-  counter-reset: list-counter; // カウンターのリセット
+  counter-reset: list-counter;
   list-style-type: none;
   padding: 0;
   margin-left: rem(5);
