--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -141,9 +141,9 @@
   text-align: center;
 }
 
-.contact__button.contact__button--subContact {
-  margin-top: rem(33);
-}
+// .contact__button.contact__button--subContact {
+//   margin-top: rem(33);
+// }
 
 .contact__button.contact__button--margin {
   @include mq("md") {
