--- a/src/sass/module/_sub-site-map.scss
+++ b/src/sass/module/_sub-site-map.scss
@@ -1,8 +1,8 @@
 @use "global" as *;
 
-.sub-site-map__content {
-  margin-top: rem(45);
-  @include mq("md") {
-    margin-top: rem(152);
-  }
-}
+// .sub-site-map__content {
+//   margin-top: rem(45);
+//   @include mq("md") {
+//     margin-top: rem(152);
+//   }
+// }
