--- a/src/sass/module/_sub-thanks.scss
+++ b/src/sass/module/_sub-thanks.scss
@@ -1,15 +1,15 @@
 @use "global" as *;
 
+.sub-thanks__inner.inner {
+  min-width: rem(700);
+}
+
 .sub-thanks__content {
-  margin-top: rem(52);
   font-size: rem(16);
   font-family: $font-family-jp;
   color: $dark-green;
   line-height: 1;
   text-align: center;
-  @include mq("md") {
-    margin-top: rem(147);
-  }
 }
 
 .sub-thanks__text {
