--- a/src/sass/module/_breadcrumb.scss
+++ b/src/sass/module/_breadcrumb.scss
@@ -2,6 +2,11 @@
 
 .breadcrumb.breadcrumb--white {
   color: $white;
+  background-color: $green;
+  padding-top: rem(88);
+  @include mq("md") {
+    padding-top: rem(98);
+  }
 }
 
 .breadcrumb__inner span {
