--- a/src/sass/module/_gallery.scss
+++ b/src/sass/module/_gallery.scss
@@ -35,7 +35,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 90%; /* 必要に応じて調整 */
+  max-width: rem(920);
+  width: 100%; /* 必要に応じて調整 */
 }
 
 .no-scroll {
