--- a/src/sass/module/_price-list.scss
+++ b/src/sass/module/_price-list.scss
@@ -13,7 +13,7 @@
   padding: rem(8) rem(0);
   @include mq("md") {
     flex-direction: column-reverse;
-    width: rem(200);
+    width: 40.571%;
   }
 }
 
@@ -26,6 +26,7 @@
   height: rem(24);
   display: inline-block;
   margin-right: rem(8);
+  margin-top: rem(8);
   @include mq("md") {
     width: rem(64);
     height: rem(64);
@@ -34,7 +35,7 @@
 
 .price-list__content {
   @include mq("md") {
-    max-width: rem(500);
+    // max-width: rem(500);
     width: 100%;
   }
 }
