--- a/src/sass/module/_price-lists.scss
+++ b/src/sass/module/_price-lists.scss
@@ -1,14 +1,14 @@
 @use "global" as *;
 
 .price-lists__items {
-  max-width: rem(345);
+  // max-width: rem(345);
   width: 100%;
   text-align: center;
   line-height: 1.5;
   border-bottom: 1px solid $green;
   border-collapse: collapse;
   @include mq("md") {
-    max-width: rem(700);
+    // max-width: rem(700);
 
     display: flex;
   }
