--- a/src/sass/module/_privacy-policy.scss
+++ b/src/sass/module/_privacy-policy.scss
@@ -1,10 +1,14 @@
 @use "global" as *;
 
-.privacy-policy__content {
-  margin-top: rem(63);
-
+.privacy-policy__inner.inner {
   @include mq("md") {
-    margin-top: rem(158);
+    max-width: rem(850);
+    width: 100%;
+  }
+}
+
+.privacy-policy__content {
+  @include mq("md") {
     max-width: rem(800);
     margin-right: auto;
     margin-left: auto;
