--- a/src/sass/module/_sub-about-us.scss
+++ b/src/sass/module/_sub-about-us.scss
@@ -1,11 +1,14 @@
 @use "global" as *;
 
-.sub-about-us__wrapper {
-  position: relative;
+.sub-about-us__inner {
   margin-top: rem(52);
   @include mq("md") {
     margin-top: rem(222);
   }
+}
+
+.sub-about-us__wrapper {
+  position: relative;
 }
 
 .sub-about-us__gallery {
