--- a/src/sass/module/_sub-campaign.scss
+++ b/src/sass/module/_sub-campaign.scss
@@ -1,10 +1,13 @@
 @use "global" as *;
 
-.sub-campaign__tab {
+.sub-campaign__inner {
   margin-top: rem(48);
   @include mq("md") {
     margin-top: rem(150);
   }
+}
+
+.sub-campaign__tab {
 }
 
 .sub-campaign__cards {
