--- a/src/sass/module/_sub-price.scss
+++ b/src/sass/module/_sub-price.scss
@@ -1,13 +1,16 @@
 @use "global" as *;
 
+.sub-price__inner.inner {
+  @include mq("md") {
+    max-width: rem(750);
+  }
+}
+
 .sub-price__table {
-  margin-top: rem(52);
-  margin-inline: auto;
-  max-width: rem(345);
+  // max-width: rem(345);
   width: 100%;
 
   @include mq("md") {
-    margin-top: rem(150);
-    max-width: rem(700);
+    // max-width: rem(700);
   }
 }
