--- a/src/sass/module/_terms-of-service.scss
+++ b/src/sass/module/_terms-of-service.scss
@@ -1,13 +1,9 @@
 @use "global" as *;
 
-.terms-of-service__content {
-  margin-top: rem(63);
-
+.terms-of-service__inner.inner {
   @include mq("md") {
-    margin-top: rem(158);
-    max-width: rem(800);
-    margin-right: auto;
-    margin-left: auto;
+    max-width: rem(850);
+    width: 100%;
   }
 }
 
