--- a/src/sass/page/_layout-sub-price.scss
+++ b/src/sass/page/_layout-sub-price.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 
-.layout-sub-faq {
-  margin-top: rem(48);
+.layout-sub-price {
+  margin-top: rem(52);
   @include mq("md") {
     margin-top: rem(150);
   }
