--- a/src/sass/page/_layout-sub-thanks.scss
+++ b/src/sass/page/_layout-sub-thanks.scss
@@ -1,5 +1,8 @@
 @use "global" as *;
 
 .layout-sub-thanks {
-  margin-top: rem(8);
+  margin-top: rem(52);
+  @include mq("md") {
+    margin-top: rem(147);
+  }
 }
