--- a/src/sass/module/_gallery.scss
+++ b/src/sass/module/_gallery.scss
@@ -14,6 +14,7 @@
     margin-top: rem(80);
   }
 }
+
 .modal {
   display: none;
   position: fixed;
@@ -31,12 +32,12 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); /* 水平方向と垂直方向の両方で中央に配置 */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  max-width: rem(920);
-  width: 100%; /* 必要に応じて調整 */
+  transform: translate(-50%, -50%);
+}
+
+.bigimg img {
+  max-height: 70vh;
+  max-width: 100%;
 }
 
 .no-scroll {
