--- a/src/sass/module/_pagenavi.scss
+++ b/src/sass/module/_pagenavi.scss
@@ -5,46 +5,68 @@
   text-align: center;
 }
 
-.pagenavi__inner.pagenavi__inner--detail {
+.pagenavi .wp-pagenavi{
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  @include mq("md") {
+    justify-content: center;
+	}
+}
+
+.pagenavi .wp-pagenavi.wp-pagenavi--detail {
   justify-content: center;
 }
 
-.previouspostslink span {
-  position: relative;
-  display: block;
-  width: 11.6px;
-  height: 22.2px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
+.pagenavi .wp-pagenavi a {
+  padding: rem(9) rem(14);
+  line-height: 1;
+  width: rem(38);
+  height: rem(38);
+  background-color: $white;
+  color: $green;
+  border: 1px solid $green;
+  transition: 0.3s;
+  cursor: pointer;
+  display: inline-block;
+  margin-left: rem(0);
+  @include mq("md") {
+    margin-left: rem(12);
+	}
 }
 
-.previouspostslink span::before,
-.previouspostslink span::after {
-  position: absolute;
-  content: "";
-  top: calc(50% - 0.5px);
-  left: 0;
-  width: 12px;
-  height: 1px;
+
+
+.pagenavi .wp-pagenavi .u-desktop {
+  display: none;
+  @include mq("md") {
+    display: block;
+  }
+}
+
+.pagenavi .wp-pagenavi .current {
+  padding: rem(9) rem(14);
+  line-height: 1;
+  width: rem(38);
+  height: rem(38);
   background-color: $green;
-  transform-origin: rem(0.5) 50%;
-}
-
-.previouspostslink span::before {
-  transform: rotate(45deg);
-}
-
-.previouspostslink span::after {
-  transform: rotate(-45deg);
-}
-
-.nextpostslink {
+  color: $white;
+  border: 1px solid $green;
+  transition: 0.3s;
+  cursor: pointer;
+  display: inline-block;
   margin-left: rem(40);
 }
 
-.nextpostslink span {
+.pagenavi .wp-pagenavi a:hover {
+  background-color: $green;
+  color: $white;
+}
+
+
+.pagenavi .wp-pagenavi .previouspostslink span,
+.pagenavi .wp-pagenavi .nextpostslink span {
   position: relative;
   display: block;
   width: 11.6px;
@@ -54,32 +76,64 @@
   transform: translate(-50%, -50%);
 }
 
-.nextpostslink span::before,
-.nextpostslink span::after {
+.pagenavi .wp-pagenavi .previouspostslink span,
+.pagenavi .wp-pagenavi .nextpostslink span {
+  position: relative;
+  display: block;
+  width: 11.6px;
+  height: 22.2px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.pagenavi .wp-pagenavi .previouspostslink span::before,
+.pagenavi .wp-pagenavi .previouspostslink span::after,
+.pagenavi .wp-pagenavi .nextpostslink span::before,
+.pagenavi .wp-pagenavi .nextpostslink span::after {
   position: absolute;
   content: "";
   top: calc(50% - 0.5px);
-  right: 0;
   width: 12px;
   height: 1px;
   background-color: $green;
+}
+
+.pagenavi .wp-pagenavi .previouspostslink:hover span::before,
+.pagenavi .wp-pagenavi .previouspostslink:hover span::after,
+.pagenavi .wp-pagenavi .nextpostslink:hover span::before,
+.pagenavi .wp-pagenavi .nextpostslink:hover span::after {
+  background-color: $white;
+}
+
+.pagenavi .wp-pagenavi .previouspostslink span::before {
+  left: 0;
+  transform: rotate(45deg);
+  transform-origin: rem(0.5) 50%;
+}
+
+.pagenavi .wp-pagenavi .previouspostslink span::after {
+  left: 0;
+  transform: rotate(-45deg);
+  transform-origin: rem(0.5) 50%;
+}
+
+.pagenavi .wp-pagenavi .nextpostslink span::after {
+  right: 0;
+  transform: rotate(45deg);
   transform-origin: calc(100% - 0.5px) 50%;
 }
 
-.nextpostslink:hover span::before,
-.nextpostslink:hover span::after {
-  background-color: $white;
-}
-
-.nextpostslink span::before {
+.pagenavi .wp-pagenavi .nextpostslink span::before {
+  right: 0;
   transform: rotate(-45deg);
+  transform-origin: calc(100% - 0.5px) 50%;
 }
 
-.nextpostslink span::after {
-  transform: rotate(45deg);
+.pagenavi .wp-pagenavi .nextpostslink {
+  margin-left: rem(40);
 }
 
-.previouspostslink:hover span::before,
-.previouspostslink:hover span::after {
-  background-color: $white;
+.pagenavi .wp-pagenavi .nextpostslink.nextpostslink--detail {
+  margin-left: rem(82);
 }
