--- a/src/sass/page/_layout-sub-about-us.scss
+++ b/src/sass/page/_layout-sub-about-us.scss
@@ -1,5 +1,8 @@
 @use "global" as *;
 
 .layout-sub-about-us {
-  margin-top: rem(5);
+  margin-top: rem(52);
+  @include mq("md") {
+    margin-top: rem(222);
+  }
 }
