--- a/src/sass/page/_layout-sub-information.scss
+++ b/src/sass/page/_layout-sub-information.scss
@@ -1,5 +1,8 @@
 @use "global" as *;
 
 .layout-sub-information {
-  margin-top: rem(8);
+  margin-top: rem(116);
+  @include mq("md") {
+    margin-top: rem(150);
+  }
 }
