--- a/src/sass/module/_gallery-list.scss
+++ b/src/sass/module/_gallery-list.scss
@@ -4,22 +4,25 @@
   display: grid;
   gap: rem(8);
   @include mq(md) {
-    grid-template-columns: repeat(13, 1fr);
+    grid-template-columns: repeat(11, 1fr);
     grid-auto-flow: dense;
   }
 }
 
 .gallery-list__item {
+  cursor: pointer;
   @include mq(md) {
-    grid-column: span 7;
+    grid-column: span 6;
     grid-row: span 1;
   }
 }
 
+
+
 .gallery-list__item:nth-of-type(6n + 1),
 .gallery-list__item:nth-of-type(6n + 6) {
   @include mq(md) {
-    grid-column: span 6;
+    grid-column: span 5;
     grid-row: span 2;
   }
 }
@@ -38,6 +41,8 @@
 .gallery-list__item:nth-of-type(6n + 6) img {
   aspect-ratio: 345/523;
   @include mq("md") {
-    aspect-ratio: 369/580;
+    aspect-ratio: 492/746;
   }
 }
+
+ 
