--- a/src/sass/module/_pagenavi.scss
+++ b/src/sass/module/_pagenavi.scss
@@ -73,8 +73,8 @@
 .pagenavi .wp-pagenavi .nextpostslink span {
   position: relative;
   display: block;
-  width: 11.6px;
-  height: 22.2px;
+  width: rem(11.6);
+  height: rem(22.2);
 }
 
 
@@ -85,9 +85,9 @@
 .pagenavi .wp-pagenavi .nextpostslink span::after {
   position: absolute;
   content: "";
-  top: calc(50% - 0.5px);
-  width: 12px;
-  height: 1px;
+  top: calc(50% - rem(0.5));
+  width: rem(12);
+  height: rem(1);
   background-color: $green;
 }
 
